--- a/style.css
+++ b/style.css
@@ -42,3 +42,19 @@ div {
     background-color: #bab7a9;
     box-sizing: border-box;
 }
+
+.one {
+    color: #e76346;
+}
+
+.two {
+    color: #4199d3;
+}
+
+.three {
+    color: #57da59;
+}
+
+.four {
+    color: #bb41d3;
+}
